# ClauseGuard

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  seed.sh
clauseguard/: config.py  main.py
clauseguard/agents/: ingestion.py  review.py  search.py
clauseguard/api/: contracts.py  deps.py  review.py  router.py  search.py
clauseguard/models/: __init__.py  clause.py  contract.py  report.py  search.py  template.py
clauseguard/services/: claude_service.py  elasticsearch_service.py  embedding_service.py  pdf_service.py
clauseguard/templates/: defaults.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CoverageMap.tsx  DropZone.tsx  FindingCard.tsx  RiskGauge.tsx
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts  constants.ts
frontend/src/pages/: ContractDetail.tsx  Dashboard.tsx  Review.tsx  Search.tsx  Upload.tsx
frontend/src/types/: api.ts
sample_contracts/: consulting_agreement.txt  data_processing_agreement.txt  enterprise_license_agreement.txt  partnership_framework_agreement.txt  saas_subscription_agreement.txt  sample_nda.txt  sample_services_agreement.txt  startup_vendor_agreement.txt
