[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clauseguard"
version = "0.1.0"
description = "Multi-agent legal contract review system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "anthropic>=0.40.0",
    "elasticsearch[async]>=8.16.0,<9.0.0",
    "sentence-transformers>=3.3.0",
    "pymupdf>=1.25.0",
]

[project.scripts]
clauseguard = "clauseguard.main:run"
